--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMUNIDAD CRISTIANA SAAVEDRA</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/styles.css">
 </head>
 
 <body>
 <header>
     <!--barra de navegacion-->
-    <nav class="menu">
+    <nav class="menu navbar-inverse">
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i> 
         </label>
         <div class="menu__img">
-            <img src="./img/logoBlanco.png" alt="logo SAAVEDRA" }>
+            <h2 class="menu__titulo">CCSAAVEDRA</h2>
         </div>
         <ul class="menu__lista">
             <li class="menu__item"><a href="./pages/inicio.html">INICIO</a></li>
